fix banner to video spacing on films#show page

--- a/app/assets/stylesheets/responsive.css.scss
+++ b/app/assets/stylesheets/responsive.css.scss
@@ -100,6 +100,7 @@
 
   .header-holder {
     height: 90px;
+    margin-bottom: 20px;
   }
 
   .video-holder {
@@ -138,6 +139,7 @@
 @media (min-width: 992px) and (max-width: 1200px) {
   .header-holder {
     height: 120px;
+    margin-bottom: 20px;
   }
 
   .voting-section {
@@ -155,6 +157,7 @@
 @media (min-width: 1200px) {
   .header-holder {
     height: 150px;
+    margin-bottom: 20px;
   }
 
   .voting-section {
